--- a/index.html
+++ b/index.html
@@ -27,19 +27,15 @@
         };
 
         function createSnowflakes() {
-            const snowContainer = document.createElement("div");
-            snowContainer.className = "snow-container";
-            document.body.appendChild(snowContainer);
+            setInterval(()
 
-            setInterval(() => {
+=>
                 const snowflake = document.createElement("div");
                 snowflake.className = "snowflake";
-                snowflake.textContent = "❄️";
                 snowflake.style.left = Math.random() * window.innerWidth + "px";
-                snowflake.style.animationDuration = `${Math.random() * 3 + 2}s`;
-                snowContainer.appendChild(snowflake);
-
-                setTimeout(() => snowContainer.removeChild(snowflake), 5000);
+                snowflake.style.animationDuration = Math.random() * 3 + 7 + "s";
+                document.body.appendChild(snowflake);
+                setTimeout(() => snowflake.remove(), 10000);
             }, 300);
         }
     </script>
@@ -104,26 +100,24 @@
             cursor: pointer;
         }
 
-        .snow-container {
+         .snowflake {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-        }
-
-        .snowflake {
-            position: absolute;
-            top: -50px;
-            font-size: 20px;
-            opacity: 0.7;
-            animation: fall 5s linear infinite;
+            top: -10px;
+            background: white;
+            border-radius: 50%;
+            width: 5px;
+            height: 5px;
+            animation: fall linear infinite;
         }
 
         @keyframes fall {
-            to {
-                transform: translateY(100vh);
+            0% {
+                transform: translateY(0) translateX(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) translateX(30px);
+                opacity: 0;
             }
         }
     </style>
