--- a/nextpage.html
+++ b/nextpage.html
@@ -39,21 +39,24 @@
         button:hover {
             background-color: #a03a53;
         }
+        /* 飘雪特效 */
         .snowflake {
-            position: absolute;
+            position: fixed;
             top: -10px;
-            color: white;
-            font-size: 1em;
-            opacity: 0.8;
+            background: white;
+            border-radius: 50%;
+            width: 5px;
+            height: 5px;
             animation: fall linear infinite;
         }
+
         @keyframes fall {
             0% {
-                transform: translateY(0) rotate(0deg);
+                transform: translateY(0) translateX(0);
                 opacity: 1;
             }
             100% {
-                transform: translateY(100vh) rotate(360deg);
+                transform: translateY(100vh) translateX(30px);
                 opacity: 0;
             }
         }
@@ -66,15 +69,17 @@
     </button>
 
     <script>
-        const snowflakeCount = 50; 
-        for (let i = 0; i < snowflakeCount; i++) {
-            const snowflake = document.createElement("div");
-            snowflake.classList.add("snowflake");
-            snowflake.textContent = "❄️"; 
-            snowflake.style.left = Math.random() * 100 + "vw";
-            snowflake.style.animationDuration = Math.random() * 3 + 2 + "s"; 
-            snowflake.style.fontSize = Math.random() * 10 + 10 + "px"; 
-            document.body.appendChild(snowflake);
+        function createSnowflakes() {
+            setInterval(()
+
+=>
+                const snowflake = document.createElement("div");
+                snowflake.className = "snowflake";
+                snowflake.style.left = Math.random() * window.innerWidth + "px";
+                snowflake.style.animationDuration = Math.random() * 3 + 7 + "s";
+                document.body.appendChild(snowflake);
+                setTimeout(() => snowflake.remove(), 10000);
+            }, 300);
         }
     </script>
 </body>
