--- a/nextpage.html
+++ b/nextpage.html
@@ -21,11 +21,13 @@
             background-attachment: fixed;
             overflow: hidden; 
         }
+
         h1 {
             font-size: 1.5em;
             margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
+
         button {
             padding: 10px 20px;
             background-color: #D9B1BD;
@@ -36,9 +38,11 @@
             cursor: pointer;
             transition: all 0.3s ease;
         }
+
         button:hover {
             background-color: #a03a53;
         }
+
         /* 飘雪特效 */
         .snowflake {
             position: fixed;
@@ -47,6 +51,7 @@
             border-radius: 50%;
             width: 5px;
             height: 5px;
+            opacity: 0.8;
             animation: fall linear infinite;
         }
 
@@ -56,7 +61,7 @@
                 opacity: 1;
             }
             100% {
-                transform: translateY(100vh) translateX(30px);
+                transform: translateY(100vh) translateX(20px);
                 opacity: 0;
             }
         }
@@ -69,17 +74,20 @@
     </button>
 
     <script>
-        function createSnowflakes() {
-            setInterval(()
+        window.onload = function() {
+            createSnowflakes();
+        };
 
-=>
+        function createSnowflakes() {
+            setInterval(() => {
                 const snowflake = document.createElement("div");
                 snowflake.className = "snowflake";
                 snowflake.style.left = Math.random() * window.innerWidth + "px";
-                snowflake.style.animationDuration = Math.random() * 3 + 7 + "s";
+                snowflake.style.animationDuration = Math.random() * 4 + 5 + "s"; // 飘落时间
+                snowflake.style.opacity = Math.random() * 0.8 + 0.2; // 透明度变化
                 document.body.appendChild(snowflake);
-                setTimeout(() => snowflake.remove(), 10000);
-            }, 300);
+                setTimeout(() => snowflake.remove(), 8000);
+            }, 400); // 控制雪花密度
         }
     </script>
 </body>
