--- a/timeline.html
+++ b/timeline.html
@@ -30,7 +30,7 @@
         .timeline-line {
             width: 2px;
             background-color: #D9B1BD;
-            height: 100%;
+            height: 100vh;
             position: relative;
             margin-left:10px;
         }
@@ -56,6 +56,64 @@
         }
         .timeline-star:hover + .timeline-content {
             display: block;
+        }
+        /* 新增第二根时间线 */
+        .timeline-secondary {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+        .timeline-secondary-line {
+            width: 2px;
+            background-color: #D9B1BD;
+            height: 100vh;
+            position: relative;
+            margin-left: 10px;
+        }
+        .timeline-secondary-star {
+            width: 16px;
+            height: 16px;
+            background-color: #D9B1BD;
+            clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+            position: absolute;
+            right: -8px; /* 向左展开 */
+            cursor: pointer;
+        }
+        .timeline-secondary-content {
+            display: none;
+            position: absolute;
+            right: 20px;
+            top: -10px;
+            background: rgba(255, 255, 255, 0.9);
+            padding: 10px;
+            border-radius: 8px;
+            max-width: 300px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .timeline-secondary-star:hover + .timeline-secondary-content {
+            display: block;
+        }
+        /* 飘雪特效 */
+        .snowflake {
+            position: fixed;
+            top: -10px;
+            background: white;
+            border-radius: 50%;
+            width: 5px;
+            height: 5px;
+            opacity: 0.8;
+            animation: fall linear infinite;
+        }
+        @keyframes fall {
+            0% {
+                transform: translateY(0) translateX(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) translateX(20px);
+                opacity: 0;
+            }
         }
         .add-event-button {
             background: rgba(255, 255, 255, 0.8);
@@ -143,6 +201,12 @@
         <div class="timeline" id="timeline">
             <button class="add-event-button" onclick="addEvent()">添加时间点</button>
             <div class="timeline-line" id="timeline-line"></div>
+        </div>
+        <!-- 第二根时间线（新增） -->
+        <div class="timeline-secondary">
+            <div class="timeline-secondary-line"></div>
+            <div class="timeline-secondary-star" style="top: 100px;"></div>
+            <div class="timeline-secondary-content">第二根时间线的内容</div>
         </div>
         <!-- Profile Section -->
         <div>
@@ -240,6 +304,21 @@
                 }
             });
         };
+        window.onload = function() {
+            createSnowflakes();
+        };
+
+        function createSnowflakes() {
+            setInterval(() => {
+                const snowflake = document.createElement("div");
+                snowflake.className = "snowflake";
+                snowflake.style.left = Math.random() * window.innerWidth + "px";
+                snowflake.style.animationDuration = Math.random() * 4 + 5 + "s"; // 飘落时间
+                snowflake.style.opacity = Math.random() * 0.8 + 0.2; // 透明度变化
+                document.body.appendChild(snowflake);
+                setTimeout(() => snowflake.remove(), 8000);
+            }, 400);
+        }
     </script>
 </body>
 </html>
