--- a/timeline.html
+++ b/timeline.html
@@ -12,6 +12,7 @@
             background-attachment: fixed;
             margin: 0;
             padding: 0;
+            height: 100vh; /* 让页面高度占满整个视口 */
         }
         .container {
             width: 90%;
@@ -19,6 +20,7 @@
             display: grid;
             grid-template-columns: 1fr 2fr 1.5fr;
             gap: 20px;
+            height: 100%; /* 让容器高度占满父元素 */
         }
         /* TimeLine Section */
         .timeline {
@@ -26,13 +28,14 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
+            height: 100%; /* 让时间线占满容器高度 */
         }
         .timeline-line {
             width: 2px;
             background-color: #D9B1BD;
-            height: 100vh;
+            height: 100%; /* 让时间线占满父元素高度 */
             position: relative;
-            margin-left:10px;
+            margin-left: 10px;
         }
         .timeline-star {
             width: 16px;
@@ -57,26 +60,9 @@
         .timeline-star:hover + .timeline-content {
             display: block;
         }
-        /* 飘雪特效 */
-        .snowflake {
-            position: fixed;
-            top: -10px;
-            background: white;
-            border-radius: 50%;
-            width: 5px;
-            height: 5px;
-            opacity: 0.8;
-            animation: fall linear infinite;
-        }
-        @keyframes fall {
-            0% {
-                transform: translateY(0) translateX(0);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(100vh) translateX(20px);
-                opacity: 0;
-            }
+        .timeline-left .timeline-content {
+            left: auto;
+            right: 20px; /* 让内容向左展开 */
         }
         .add-event-button {
             background: rgba(255, 255, 255, 0.8);
@@ -150,6 +136,27 @@
         .index a:hover {
             color: #7b2a3f;
         }
+         /* 飘雪特效 */
+        .snowflake {
+            position: fixed;
+            top: -10px;
+            background: white;
+            border-radius: 50%;
+            width: 5px;
+            height: 5px;
+            opacity: 0.8;
+            animation: fall linear infinite;
+        }
+        @keyframes fall {
+            0% {
+                transform: translateY(0) translateX(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(100vh) translateX(20px);
+                opacity: 0;
+            }
+        }
     </style>
 </head>
 <body>
@@ -165,11 +172,9 @@
             <button class="add-event-button" onclick="addEvent()">添加时间点</button>
             <div class="timeline-line" id="timeline-line"></div>
         </div>
-        <!-- 第二根时间线（新增） -->
-        <div class="timeline-secondary">
-            <div class="timeline-secondary-line"></div>
-            <div class="timeline-secondary-star" style="top: 100px;"></div>
-            <div class="timeline-secondary-content">第二根时间线的内容</div>
+        <!-- 新增的时间线 -->
+        <div class="timeline timeline-left" id="timeline-left">
+            <div class="timeline-line" id="timeline-line-left"></div>
         </div>
         <!-- Profile Section -->
         <div>
@@ -209,8 +214,11 @@
         }
         function renderTimeline() {
             const container = document.getElementById("timeline-line");
+            const containerLeft = document.getElementById("timeline-line-left");
             container.innerHTML = "";
+            containerLeft.innerHTML = "";
             events.forEach((event, index) => {
+                // 第一根时间线的星星和内容
                 const star = document.createElement("div");
                 star.className = "timeline-star";
                 star.style.top = `${index * 50}px`;
@@ -219,6 +227,16 @@
                 content.innerHTML = `<strong>${event.date}</strong><p>${event.description}</p>`;
                 container.appendChild(star);
                 container.appendChild(content);
+
+                // 第二根时间线的星星和内容
+                const starLeft = document.createElement("div");
+                starLeft.className = "timeline-star";
+                starLeft.style.top = `${index * 50}px`;
+                const contentLeft = document.createElement("div");
+                contentLeft.className = "timeline-content";
+                contentLeft.innerHTML = `<strong>${event.date}</strong><p>${event.description}</p>`;
+                containerLeft.appendChild(starLeft);
+                containerLeft.appendChild(contentLeft);
             });
         }
         function uploadAvatar(id) {
